<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_shopping"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_mesachats"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/menu_purchase" />

        <item
            android:id="@+id/nav_mesventes"
            android:icon="@drawable/ic_shopping_basket"
            android:title="@string/menu_livre" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_b"
            android:title="@string/menu_chat" />

        <item
            android:id="@+id/nav_add_book"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/AddBook" />

        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_deconnexion"
            android:icon="@drawable/ic_lock_"
            android:title="@string/menu_logout" />

    </group>


</menu>
