<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDescription">


    <TextView
        android:id="@+id/contact_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/contact"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/startblue"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/auteur"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/label_author"
        app:layout_constraintStart_toStartOf="@+id/category"
        app:layout_constraintTop_toTopOf="@+id/label_author"
        android:contentDescription="@string/author_name"
        />

    <ImageView
        android:id="@+id/imagebook"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/demande"
        app:srcCompat="@drawable/book"
        android:contentDescription="@string/image_du_livre"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebook" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/titre_du_livre"
        android:fontFamily="serif"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagebook"
        app:layout_constraintTop_toTopOf="@+id/imagebook" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:fontFamily="serif"
        android:text="Categorie"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/label_category"
        app:layout_constraintStart_toEndOf="@+id/label_category"
        app:layout_constraintTop_toTopOf="@+id/label_category"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="Catégorie"
        />


    <TextView
        android:id="@+id/details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_book_detail_details_section"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/startblue"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/contact_label" />


    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_book_detail_description_section"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/startblue"
        app:layout_constraintStart_toStartOf="@+id/details_label"
        app:layout_constraintTop_toBottomOf="@+id/label_category" />

    <TextView
        android:id="@+id/label_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_label"
        android:layout_marginTop="16dp"
        android:text="@string/label_book_detail_author"
        app:layout_constraintStart_toStartOf="@+id/details_label"
        app:layout_constraintTop_toBottomOf="@+id/details_label" />

    <TextView
        android:id="@+id/label_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_author"
        android:layout_marginTop="12dp"
        android:text="@string/label_book_detail_category"
        app:layout_constraintStart_toStartOf="@+id/label_author"
        app:layout_constraintTop_toBottomOf="@+id/label_author" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="Prix du livre"
        android:text="prix : 200DH"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageButton
        android:id="@+id/contactImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:background="@color/white"
        android:contentDescription="Bouton pour contacter le vendeur"
        app:layout_constraintBottom_toBottomOf="@+id/contact_label"
        app:layout_constraintStart_toEndOf="@+id/contact_label"
        app:layout_constraintTop_toTopOf="@+id/contact_label"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_chat_b"
        />

    <TextView
        android:id="@+id/demande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Cliquez pour demander"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Cliquer Pour demander"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/description_label"
        app:layout_constraintTop_toBottomOf="@+id/description_label">

        <ImageButton
            android:id="@+id/start_stop"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:srcCompat="@drawable/ic_play"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="Bouton lecture description du livre"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_stop"
            app:layout_constraintTop_toTopOf="parent">

            -

            <TextView
                android:id="@+id/textCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/playerSeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>