<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registering">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/profil_firstname" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fname"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@color/darkgreen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Page d'inscription"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:text="@string/lname"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/profil_email" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mobile"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/profil_firstname"
        android:layout_width="117dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightgrey"
        android:ems="10"
        android:hint="Prenom"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/profil_lastname"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        android:contentDescription="Inserer Prenom"
        />

    <EditText
        android:id="@+id/profil_lastname"
        android:layout_width="117dp"
        android:layout_height="35dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/lightgrey"
        android:ems="10"
        android:hint="Nom"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/profil_firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="Inserer nom"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="216dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightgrey"
        android:ems="10"
        android:hint="Mot de passe"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:contentDescription="Inserer mot de passe"
        />

    <EditText
        android:id="@+id/profil_email"
        android:layout_width="216dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightgrey"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:contentDescription="Inserer Email"
        />

    <EditText
        android:id="@+id/profil_mobile"
        android:layout_width="216dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightgrey"
        android:ems="10"
        android:hint="Numero"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:contentDescription="Inserer numero de telephone"
        />

    <TextView
        android:id="@+id/redirectLogin"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="Vous avez deja un compte"
        android:gravity="center"
        android:text="@string/already"
        android:textColor="@color/darkgreen"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login"
        android:layout_width="285dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@color/darkgreen"
        android:contentDescription="Bouton d'inscription"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profil_mobile" />

</androidx.constraintlayout.widget.ConstraintLayout>